# practice-rust-cookbook

./: README.md
01-algorithms/create_random_passwords/: Cargo.toml
01-algorithms/create_random_passwords/src/: main.rs
01-algorithms/generate_random_numbers/: Cargo.toml
01-algorithms/generate_random_numbers/src/: main.rs
01-algorithms/generate_random_values_of_a_custom_type/: Cargo.toml
01-algorithms/gernerate_random_numbers_within_a_range/: Cargo.toml
01-algorithms/gernerate_random_numbers_within_a_range/src/: main.rs
01-algorithms/sort_a_vector/: Cargo.toml
01-algorithms/sort_a_vector/src/: main.rs
02-command_line/ansi_terminal/src/: main.rs
02-command_line/parse_command_line_arguments/: Cargo.toml
02-command_line/parse_command_line_arguments/src/: main.rs
03-compression/decompress/: Cargo.toml
03-compression/decompress/src/: main.rs
03-compression/tarball/: Cargo.toml
03-compression/tarball/src/: main.rs
04-concurrency/fractal/: Cargo.toml
04-concurrency/fractal/src/: main.rs
04-concurrency/spawn_a_short_lived_thread/: Cargo.toml
04-concurrency/spawn_a_short_lived_thread/src/: main.rs
